[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta" 


[project]
name = "pytest-mock-unity-catalog"
dynamic = ["version"]
description = "Unity Catalog pyspark fixtures"

readme = "README.md"

requires-python = ">=3.9"

authors = [{ name = "Marian Reuss", email = "marian.reuss@databricks.com" }]
maintainers = [{ name = "Marian Reuss", email = "marian.reuss@databricks.com" }]


classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pytest",
    "pyspark"
]

[dependency-groups]
dev = [
  "pre-commit>=4.3.0"
]

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.setuptools]
packages = ["pytest_mock_unity_catalog"]

[project.entry-points."pytest11"]
mock-unity-catalog = "pytest_mock_unity_catalog"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
